fixing open card data

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@jyroneparker" />
+    <meta property="og:url" content="https://mastashake08.github.io/shake-torrent" />
+    <meta property="og:title" content="A Twitter for My Sister" />
+    <meta property="og:description" content="Torrent file sharing tool. View files, seed files, download files." />
+    <meta property="og:image" content="https://mastashake08.github.io/shake-torrent/image/shake-128.png" />
   </head>
   <body>
     <noscript>
