--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:creator" content="@jyroneparker" />
     <meta property="og:url" content="https://mastashake08.github.io/shake-torrent" />
-    <meta property="og:title" content="A Twitter for My Sister" />
+    <meta property="og:title" content="Shake Torrent - A WebTorrent tool and browser extension." />
     <meta property="og:description" content="Torrent file sharing tool. View files, seed files, download files." />
     <meta property="og:image" content="https://mastashake08.github.io/shake-torrent/image/shake-128.png" />
   </head>
